--- a/ColorMaker/MainPage.xaml
+++ b/ColorMaker/MainPage.xaml
@@ -9,8 +9,58 @@
         <Color x:Key="Tertiary">#705c2e</Color>
     </ContentPage.Resources>
 
-    <Grid BackgroundColor="Black" x:Name="container">
-        
+    <Grid x:Name="Container" BackgroundColor="Black">
+        <Frame Margin="10,150,10,150" VerticalOptions="Center" >
+            <VerticalStackLayout Spacing="15" VerticalOptions="Center">
+                <Label
+                    FontAttributes="Bold"
+                    FontSize="Large"
+                    HorizontalTextAlignment="Center"
+                    Text="Color Maker" />
+                <Label Text="Red Value:" />
+                <Slider
+                    x:Name="sldRed"
+                    MaximumTrackColor="{StaticResource Tertiary}"
+                    MinimumTrackColor="{StaticResource Secondary}"
+                    ThumbColor="{StaticResource Primary}"
+                    ValueChanged="sldRed_ValueChanged" />
+                <Label Text="Green Value:" />
+                <Slider
+                    x:Name="sldGreen"
+                    MaximumTrackColor="{StaticResource Tertiary}"
+                    MinimumTrackColor="{StaticResource Secondary}"
+                    ThumbColor="{StaticResource Primary}"
+                    ValueChanged="sldRed_ValueChanged" />
+                <Label Text="Blue Value:" />
+                <Slider
+                    x:Name="sldBlue"
+                    MaximumTrackColor="{StaticResource Tertiary}"
+                    MinimumTrackColor="{StaticResource Secondary}"
+                    ThumbColor="{StaticResource Primary}"
+                    ValueChanged="sldRed_ValueChanged" />
+                <Frame CornerRadius="25" HorizontalOptions="Center" Margin="60,0,60,0">
+                    <HorizontalStackLayout>
+                        <Label
+                            x:Name="lblHex"
+                            HorizontalTextAlignment="End"
+                            Text="HEX Value: #000000"
+                            VerticalOptions="Center" />
+                        <ImageButton
+                            Margin="10,0,0,0"
+                            HeightRequest="25"
+                            Source="copy.png"
+                            VerticalOptions="Center"
+                            WidthRequest="25" 
+                            Clicked="ImageButton_Clicked"/>
+                    </HorizontalStackLayout>
+                </Frame>
+                <Button
+                    x:Name="btnRandom"
+                    BackgroundColor="{StaticResource Primary}"
+                    Text="Generate Random Color" 
+                    Clicked="btnRandom_Clicked"/>
+            </VerticalStackLayout>
+        </Frame>
     </Grid>
 
 </ContentPage>
